--- a/example/translations/es_LA.json
+++ b/example/translations/es_LA.json
@@ -21,16 +21,6 @@
       ],
       "types": []
     },
-    "+JZjqgCHObNg6jWov91o+w==": {
-      "tokens": [],
-      "translations": [
-        {
-          "translation": "Desconocido (plural)",
-          "variations": {}
-        }
-      ],
-      "types": []
-    },
     "+Owe0R1Wgj++SFlrgb3vIg==": {
       "tokens": [],
       "translations": [
@@ -85,7 +75,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "{name} tiene una p\u00e1gina para compartir. {=View} la p\u00e1gina.",
+          "translation": "{name} tiene una página para compartir. {=View} la página.",
           "variations": {}
         }
       ],
@@ -95,7 +85,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "Usa el siguiente formulario para ver FBT en acci\u00f3n.",
+          "translation": "Usa el siguiente formulario para ver FBT en acción.",
           "variations": {}
         }
       ],
@@ -125,7 +115,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "{name} tiene una publicaci\u00f3n para compartir. {=View} la publicaci\u00f3n.",
+          "translation": "{name} tiene una publicación para compartir. {=View} la publicación.",
           "variations": {}
         }
       ],
@@ -165,7 +155,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "\u00a1Pru\u00e9balo!",
+          "translation": "¡Pruébalo!",
           "variations": {}
         }
       ],
@@ -215,7 +205,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "{name} tiene una publicaci\u00f3n para compartir. {=View} la publicaci\u00f3n.",
+          "translation": "{name} tiene una publicación para compartir. {=View} la publicación.",
           "variations": {}
         }
       ],
@@ -285,7 +275,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "{name} tiene una publicaci\u00f3n para compartir. {=View} la publicaci\u00f3n.",
+          "translation": "{name} tiene una publicación para compartir. {=View} la publicación.",
           "variations": {}
         }
       ],
@@ -305,7 +295,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "n\u00famero",
+          "translation": "número",
           "variations": {}
         }
       ],
@@ -365,7 +355,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "{name} comparti\u00f3 {=a photo} contigo",
+          "translation": "{name} compartió {=a photo} contigo",
           "variations": {}
         }
       ],
@@ -485,7 +475,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "{name} tiene una p\u00e1gina para compartir. {=View} la p\u00e1gina.",
+          "translation": "{name} tiene una página para compartir. {=View} la página.",
           "variations": {}
         }
       ],
@@ -505,7 +495,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "{name} comparti\u00f3 {=[number] photos} contigo",
+          "translation": "{name} compartió {=[number] photos} contigo",
           "variations": {}
         }
       ],
@@ -555,7 +545,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "{name} tiene una p\u00e1gina para compartir. {=View} la p\u00e1gina.",
+          "translation": "{name} tiene una página para compartir. {=View} la página.",
           "variations": {}
         }
       ],
@@ -646,6 +636,186 @@
       "translations": [
         {
           "translation": "{=View}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "1zt7aP/cVQqI5IyAJQku8w==": {
+      "description": "Gender Select label",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "Unknown (plural)",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "E9cv0amPwjV70PBD0XyIAw==": {
+      "description": "List example.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "Do you want to share a {list}?",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "XWOy1r8lQxGmBtCn03YSnQ==": {
+      "description": "Item in a list.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "photo",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "Z1GfhhBITgeqZUQ1GgP35Q==": {
+      "description": "Item in a list.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "link",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "GzijBgnhfi6GiUsHFZlY7Q==": {
+      "description": "Item in a list.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "video",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "IYUmtYxQtGdt1MucjXrsVA==": {
+      "description": "Label with meaning 'at least number'",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{number}+",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "ZIF1WhVQwt7WZJvFTEbMWw==": {
+      "description": "Label with meaning 'less than number'",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "<{number}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "Oc/9PrbjfyLHS60BXceD1A==": {
+      "description": "A list of items of various types, for example: \"San Francisco; London; Tokyo\". {previous items} and {following items} are themselves lists that contain one or more items.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{previous items}; {following items}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "AXXbKEUZuc0ji1IClRrOOw==": {
+      "description": "A list of items of various types separated by bullets, for example: \"San Francisco \\u2022 London \\u2022 Tokyo\". {previous items} and {following items} are themselves lists that contain one or more items.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{previous items} • {following items}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "89ACgPMtnwlLDSeqhLBx2Q==": {
+      "description": "A list of items of various types separated by commas, for example: \"San Francisco, London, Tokyo\". {previous items} and {following items} are themselves lists that contain one or more items.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{previous items}, {following items}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "icNetEL/crQv/PS6yhySVQ==": {
+      "description": "A list of items of various types, for example: \"item1, item2, item3 and item4\"",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{list of items} and {last item}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "8eSaAzrWtAqn9ktNKfkaEg==": {
+      "description": "A list of items of various types, for example: \"item1, item2, item3 or item4\"",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{list of items} or {last item}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "+IBI7kr/mMKdzp+3stDvkw==": {
+      "description": "A list of items of various types, for example: \"San Francisco; London; Tokyo\". {previous items} itself contains one or more items.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{previous items}; {last item}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "55IeE8c0qqtjTU0lo7q9AA==": {
+      "description": "A list of items of various types separated by bullets, for example: \"San Francisco \\u2022 London \\u2022 Tokyo\". {previous items} contains one or more items.",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{list of items} • {last item}",
+          "variations": {}
+        }
+      ],
+      "types": []
+    },
+    "6PRJS0QalZfvaN8CkKCUCw==": {
+      "description": "A list of items of various types, for example: \"item1, item2, item3, item4\"",
+      "status": "new",
+      "tokens": [],
+      "translations": [
+        {
+          "translation": "{list of items}, {last item}",
           "variations": {}
         }
       ],
