Improve ESLint docs, small improvements to `no-untranslated-strings`.

--- a/website/translations/ja_JP.json
+++ b/website/translations/ja_JP.json
@@ -50,7 +50,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "Get Started",
+          "translation": "はじめに",
           "variations": {}
         }
       ],
