--- a/example/translations/he_IL.json
+++ b/example/translations/he_IL.json
@@ -52,9 +52,7 @@
       "types": []
     },
     "0V7ZnHNmh24KOTMXet6egA==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה/צפי",
@@ -75,9 +73,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "1PKQnkF/lWmk79Tv/ys24A==": {
       "tokens": [],
@@ -110,9 +106,7 @@
       "types": []
     },
     "2g/nu1wXuAprwkG0x4g2Sg==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה",
@@ -133,14 +127,10 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "62QihzloOzTvYfmN4kGi1g==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה/צפי",
@@ -161,9 +151,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "7y2mltlG5nn8ihCz2AK1AQ==": {
       "tokens": [],
@@ -176,9 +164,7 @@
       "types": []
     },
     "8K2CwVTkZPiVRBcu2gFh4A==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפי",
@@ -199,9 +185,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "95jC7mDsBpqzCbCA3504zw==": {
       "tokens": [],
@@ -304,9 +288,7 @@
       "types": []
     },
     "HYOiaHtMv4SZkQ1G4kJzXg==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה/צפי",
@@ -327,14 +309,10 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "HtVslFb7gTHOErVosGI4JQ==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה",
@@ -355,9 +333,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "HusiL84DARy+8jiK7kc7qg==": {
       "tokens": [],
@@ -430,9 +406,7 @@
       "types": []
     },
     "NZayMjBYVOrnk/YJIHEeMw==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה/צפי",
@@ -453,14 +427,10 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "PY1wTdwttmhzWyQcxs2pjw==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה",
@@ -481,9 +451,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "Pcdu2jt+bnKzFRSeBLICcQ==": {
       "tokens": [],
@@ -496,9 +464,7 @@
       "types": []
     },
     "PqPPir8Kg9xSlqdednPFOg==": {
-      "tokens": [
-        "name"
-      ],
+      "tokens": ["name"],
       "translations": [
         {
           "translation": "{name} שיתפה איתך {=a photo}",
@@ -519,9 +485,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "PvA+AsZdpZXw81g/J3Ow0Q==": {
       "tokens": [],
@@ -584,9 +548,7 @@
       "types": []
     },
     "WTvjwq3MRRlwqCfYcX7mPw==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה/צפי",
@@ -607,9 +569,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "Yjqpv79V3JSE255LFP0AAA==": {
       "tokens": [],
@@ -672,9 +632,7 @@
       "types": []
     },
     "gVKMc/8jq5vnYR5v2bb32g==": {
-      "tokens": [
-        "name"
-      ],
+      "tokens": ["name"],
       "translations": [
         {
           "translation": "{name} שיתף איתך {=[number] photos}",
@@ -695,9 +653,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "kFRDiDKN3KACFyC0YzbdDg==": {
       "tokens": [],
@@ -710,9 +666,7 @@
       "types": []
     },
     "kWoh+a8Q6EYN5VFiM40S7g==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה",
@@ -733,14 +687,10 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "kyOdXxi5Nw1ONx5Mv5NR0Q==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה",
@@ -761,9 +711,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "ljoRgg3SRs0vzbkgFv1tSA==": {
       "tokens": [],
@@ -786,9 +734,7 @@
       "types": []
     },
     "pb4CFZWkRPo5gG05ZpMq+A==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה/צפי",
@@ -809,9 +755,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "pmznwyWXEqrG9HZwb5aGsQ==": {
       "tokens": [],
@@ -834,9 +778,7 @@
       "types": []
     },
     "sN74Xit9wwCnSYYz1TrF0w==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה",
@@ -857,9 +799,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "tYYOLLMbffdJQQlSVEVv/A==": {
       "tokens": [],
@@ -872,9 +812,7 @@
       "types": []
     },
     "vC7YhdaCftXBXQ/fitVzXw==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפה/צפי",
@@ -895,14 +833,10 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "xV4+VPr3bTc8rxKqq1nvqw==": {
-      "tokens": [
-        "__viewing_user__"
-      ],
+      "tokens": ["__viewing_user__"],
       "translations": [
         {
           "translation": "צפי",
@@ -923,9 +857,7 @@
           }
         }
       ],
-      "types": [
-        3
-      ]
+      "types": [3]
     },
     "z67lDQSKUy/LXrqrRHj3aw==": {
       "tokens": [],
