Enable French on the website.

--- a/website/translations/de_DE.json
+++ b/website/translations/de_DE.json
@@ -19,7 +19,7 @@
       "tokens": [],
       "translations": [
         {
-          "translation": "Ein Internationalisierungs-Framework für JavaScript & React, das {=leistungsstark}, {=flexibel} und {=intuitiv} ist.",
+          "translation": "Ein Internationalisierungs-Framework für JavaScript & React, das {=powerful}, {=flexible} und {=intuitive} ist.",
           "variations": {}
         }
       ],
