Apply suggestion from @cpojer

--- a/example/translations/de_DE.json
+++ b/example/translations/de_DE.json
@@ -922,7 +922,7 @@
       "status": "translated",
       "translations": [
         {
-          "translation": "Use the form below to see fbtee in action.",
+          "translation": "Verwende dieses Formular um fbtee in Aktion zu sehen.",
           "variations": {}
         }
       ]
